# nbus

./: .gitignore  AGENTS.md  CRYPTO.md  PROTOCOL.md  README.md  bus.test.ts  client-crypto.test.ts  install.sh  keys.test.ts  package.json
.github/workflows/: ci.yml  release.yml
.mycelium/: .gitignore  mycelium.db
packaging/: nbus-service
packaging/homebrew/: README.md  nbus.rb
packaging/launchd/: com.nbus.nbusd.plist
packaging/systemd/: nbusd.service
scripts/: build.sh
sdk/python/: README.md  pyproject.toml
sdk/python/nbus/: __init__.py  client.py  crypto.py
sdk/python/tests/: conformance_test.py  crypto_api_test.py  crypto_conformance_test.py
sdk/typescript/: README.md  client-crypto.test.ts  client.test.ts  crypto.test.ts  keys.test.ts  package.json  phi-report.json  tsconfig.json
sdk/typescript/src/: client.ts  index.ts
src/: bus.ts  cli.ts  client.ts  config.ts  crypto.ts  daemon.ts  index.ts  protocol.test.ts  protocol.ts
tests/: conformance.test.ts  crypto-conformance.test.ts  crypto-vectors.json  crypto-vectors.schema.md  gen-crypto-vectors.ts  vectors.json  vectors.schema.md
