[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "nbus-client"
version = "0.1.0"
description = "Async Python client for the nbus local IPC bus daemon"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "nbus" }]
# Core has NO runtime dependencies (stdlib asyncio + json only).
# Crypto dependency is added in task #16.
dependencies = [
    "cryptography>=49.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
]

[tool.hatch.build.targets.wheel]
packages = ["nbus"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
]
